Stable #2: Set default spawn point and more new features.